<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="301dp"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/SampleMerchantApp"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/MerchantID"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/MerchantID" />

        <EditText
            android:id="@+id/ProductCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/ProductCode"/>

        <EditText
            android:id="@+id/MerchantAuthCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"

            android:hint="@string/MerchantAuthCode"/>


        <EditText
            android:id="@+id/UniqueMerchantTxnID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"

            android:hint="@string/UniqueMerchantTxnID"/>
        <EditText
            android:id="@+id/Securesecretkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"

            android:hint="@string/Securesecretkey"/>

        <EditText
            android:id="@+id/Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"

            android:hint="@string/Amount"/>
        <EditText
            android:id="@+id/Themeselection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary"

            android:hint="@string/ThemeSelection"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Action Bar :"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/Actionbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Actionbaryes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"/>

                <RadioButton
                    android:id="@+id/Actionbarno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="No"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Production Request:"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"/>

            <RadioGroup
                android:id="@+id/ProducationRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/productionrequestyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"/>

                <RadioButton
                    android:id="@+id/productionrequestno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="No"/>

            </RadioGroup>

        </LinearLayout>


        <Button
            android:id="@+id/Submit"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="Post"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Submit"
            android:textColor="#FFFF"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
